Download Now button overlaped Solved

--- a/css/style.css
+++ b/css/style.css
@@ -690,7 +690,7 @@ footer .footer-end{
     .hero .left{
         margin-top: -4rem;
         margin-right: -7rem;
-        padding-bottom: 3rem;
+        padding-bottom: 5rem;
     }
     .about-inner-wrap{
         flex-direction: column;
